YTI-1279: Linked code modal title and status aligning fixed to work with longer status texts.

--- a/src/app/components/form/search-linked-code-modal.component.scss
+++ b/src/app/components/form/search-linked-code-modal.component.scss
@@ -25,7 +25,6 @@
 
 .title {
   display: block;
-  width: 75%;
   padding-bottom: 5px;
 }
 
